Page formatting change

--- a/landscapes/beaches.html
+++ b/landscapes/beaches.html
@@ -31,31 +31,33 @@
 
     <!-- Main Content -->
     <main class="content">
-        <h2>Beautiful Beaches</h2>
-        <ul class="beaches-list">
-            <li>
-                <img src="../images/Cannon_Beach.jpg" alt="Cannon Beach">
-                <div class="beach-text">
+
+        <div class="beaches-container">
+            <div class="beach-item">
+                <img src="../images/Cannon_Beach.jpg" alt="Cannon Beach" class="beach-image">
+                <div class="beach-box">
                     <h3>Cannon Beach</h3>
-                    <p>Famous for Haystack Rock, this Oregon beach is a must-see with stunning views, tide pools, and
-                        vibrant sunsets.</p>
+                    <p>Famous for Haystack Rock, this Oregon beach is a must-see with stunning views, tide pools, and vibrant sunsets.</p>
                 </div>
-            </li>
-            <li>
-                <img src="../images/Ruby_Beach.jpg" alt="Ruby Beach">
-                <div class="beach-text">
-                    <h3>Placeholder</h3>
-                    <p>Placeholder</p>
+            </div>
+
+            <div class="beach-item">
+                <img src="../images/Ruby_Beach.jpg" alt="Ruby Beach" class="beach-image">
+                <div class="beach-box">
+                    <h3>Ruby Beach</h3>
+                    <p>Known for its dramatic sea stacks and driftwood-covered shores, Ruby Beach offers breathtaking coastal scenery.</p>
                 </div>
-            </li>
-            <li>
-                <img src="../images/Glass_Beach.jpg" alt="Glass Beach">
-                <div class="beach-text">
-                    <h3>Placeholder</h3>
-                    <p>Placeholder</p>
+            </div>
+
+            <div class="beach-item">
+                <img src="../images/Glass_Beach.jpg" alt="Glass Beach" class="beach-image">
+                <div class="beach-box">
+                    <h3>Glass Beach</h3>
+                    <p>Once a dumpsite, Glass Beach is now a unique treasure trove of colorful sea glass polished by the ocean.</p>
                 </div>
-            </li>
-        </ul>
+            </div>
+        </div>
+
     </main>
 
     <!-- Footer -->
