--- a/landscapes/cities.html
+++ b/landscapes/cities.html
@@ -31,30 +31,33 @@
 
     <!-- Main Content -->
     <main class="content">
-        <h2>Beautiful Cities</h2>
-        <ul class="cities-list">
-            <li>
-                <img src="../images/Portland.jpg" alt="Portland">
-                <div class="city-text">
-                    <h3>Placeholder</h3>
-                    <p>Placeholder</p>
+
+        <div class="cities-container">
+            <div class="city-item">
+                <img src="../images/Portland.jpg" alt="Portland" class="city-image">
+                <div class="city-box">
+                    <h3>Portland</h3>
+                    <p>Known for its vibrant culture, lush green parks, and thriving food scene.</p>
                 </div>
-            </li>
-            <li>
-                <img src="" alt="Seattle">
-                <div class="city-text">
-                    <h3>Placeholder</h3>
-                    <p>Placeholder</p>
+            </div>
+
+            <div class="city-item">
+                <img src="../images/Seattle.jpg" alt="Seattle" class="city-image">
+                <div class="city-box">
+                    <h3>Seattle</h3>
+                    <p>Home to the iconic Space Needle, bustling Pike Place Market, and breathtaking waterfront views.</p>
                 </div>
-            </li>
-            <li>
-                <img src="" alt="British Columbia">
-                <div class="city-text">
-                    <h3>Placeholder</h3>
-                    <p>Placeholder</p>
+            </div>
+
+            <div class="city-item">
+                <img src="../images/Vancouver.jpg" alt="Vancouver" class="city-image">
+                <div class="city-box">
+                    <h3>Vancouver</h3>
+                    <p>A stunning coastal city in British Columbia, famous for its natural beauty and diverse culture.</p>
                 </div>
-            </li>
-        </ul>
+            </div>
+        </div>
+
     </main>
 
     <!-- Footer -->
