--- a/landscapes/state_parks.html
+++ b/landscapes/state_parks.html
@@ -31,60 +31,39 @@
 
     <!-- Main Content -->
     <main class="content">
-        <h2>Beautiful Parks</h2>
-        <ul class="parks-list">
-            <li>
-                <img src="../images/Redwoods.jpg" alt="Redwoods">
-                <div class="park-text">
-                    <h3>Placeholder</h3>
-                    <p>Placeholder</p>
+
+        <div class="parks-container">
+            <div class="park-item">
+                <img src="../images/Redwoods.jpg" alt="Redwoods" class="park-image">
+                <div class="park-box">
+                    <h3>Redwoods National and State Parks</h3>
+                    <p>Home to the tallest trees on Earth, this park offers breathtaking views, lush forests, and beautiful trails.</p>
                 </div>
-            </li>
-            <li>
-                <img src="" alt="Mount Rainier">
-                <div class="park-text">
-                    <h3>Placeholder</h3>
-                    <p>Placeholder</p>
+            </div>
+
+            <div class="park-item">
+                <img src="../images/Mount_Rainier.jpg" alt="Mount Rainier" class="park-image">
+                <div class="park-box">
+                    <h3>Mount Rainier National Park</h3>
+                    <p>Known for its towering peak, snow-covered landscapes, and incredible wildlife, it's a must-see for nature lovers.</p>
                 </div>
-            </li>
-            <li>
-                <img src="" alt="Multnomah Falls">
-                <div class="park-text">
-                    <h3>Placeholder</h3>
-                    <p>Placeholder</p>
+            </div>
+
+            <div class="park-item">
+                <img src="../images/Multnomah_Falls.jpg" alt="Multnomah Falls" class="park-image">
+                <div class="park-box">
+                    <h3>Multnomah Falls</h3>
+                    <p>A stunning waterfall located in the Columbia River Gorge, offering scenic views and trails for all skill levels.</p>
                 </div>
-            </li>
-        </ul>
+            </div>
+        </div>
+
     </main>
 
     <!-- Footer -->
     <footer class="footer">
         <p>Copyright: © 2025 Traverse The Cascades. All rights reserved.</p>
     </footer>
-
-</body>
-
-</html>
-<!-- Header -->
-<header class="header">
-    <a href="../index.html">
-        <img src="../images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
-    </a>
-    <nav class="nav-links">
-        <nav class="nav-links">
-            <a href="../states_provinces/oregon.html">Oregon</a>
-            <a href="../states_provinces/washington.html">Washington</a>
-            <a href="../states_provinces/idaho.html"> Idaho</a>
-            <a href="../states_provinces/california.html">Northern California</a>
-            <a href="../states_provinces/british_columbia.html">British Columbia</a>
-        </nav>
-    </nav>
-</header>
-
-<!-- Footer -->
-<footer class="footer">
-    <p>Copyright: © 2025 Traverse The Cascades. All rights reserved.</p>
-</footer>
 
 </body>
 
