Updated Photos and Added Basic Layout

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <a href="landscapes/cities.html" class="image-container" data-text="Cities">
             <img src="images/Portland.jpg" alt="Cities">
         </a>
-        <a href="landscapes/beaches.html" class="image-container" data-text="Beaches">
-            <img src="images/Cannon_Beach.jpg" alt="Beaches">
+        <a href="landscapes/beaches.html" class="image-container" data-text="Beaches & Coastline">
+            <img src="images/Cannon_Beach.jpg" alt="Beaches & Coastline">
         </a>
-        <a href="landscapes/state_parks.html" class="image-container" data-text="State Parks">
-            <img src="images/Redwoods.jpg" alt="State Parks">
+        <a href="landscapes/state_parks.html" class="image-container" data-text="Parks & Scenic Areas">
+            <img src="images/Redwoods.jpg" alt="Parks & Scenic Areas">
         </a>
     </div>
 
