--- a/landscapes/beaches.html
+++ b/landscapes/beaches.html
@@ -34,13 +34,13 @@
 
         <div class="beaches-container">
             <div class="beach-item">
-                <img src="../images/Cannon_Beach.jpg" alt="Cannon Beach" class="beach-image">
+                <img src="../images/Cannon_Beach_2.jpg" alt="Cannon Beach" class="beach-image">
                 <div class="beach-box">
                     <h3>Cannon Beach</h3>
                     <p>Famous for Haystack Rock, this Oregon beach is a must-see with stunning views, tide pools, and vibrant sunsets.</p>
                 </div>
             </div>
-
+        
             <div class="beach-item">
                 <img src="../images/Ruby_Beach.jpg" alt="Ruby Beach" class="beach-image">
                 <div class="beach-box">
@@ -48,7 +48,7 @@
                     <p>Known for its dramatic sea stacks and driftwood-covered shores, Ruby Beach offers breathtaking coastal scenery.</p>
                 </div>
             </div>
-
+        
             <div class="beach-item">
                 <img src="../images/Glass_Beach.jpg" alt="Glass Beach" class="beach-image">
                 <div class="beach-box">
@@ -56,7 +56,7 @@
                     <p>Once a dumpsite, Glass Beach is now a unique treasure trove of colorful sea glass polished by the ocean.</p>
                 </div>
             </div>
-        </div>
+        </div>        
 
     </main>
 
