--- a/landscapes/cities.html
+++ b/landscapes/cities.html
@@ -34,7 +34,7 @@
 
         <div class="cities-container">
             <div class="city-item">
-                <img src="../images/Portland.jpg" alt="Portland" class="city-image">
+                <img src="../images/Portland_2.jpg" alt="Portland" class="city-image">
                 <div class="city-box">
                     <h3>Portland</h3>
                     <p>Known for its vibrant culture, lush green parks, and thriving food scene.</p>
