--- a/landscapes/state_parks.html
+++ b/landscapes/state_parks.html
@@ -26,7 +26,7 @@
 
     <!-- Background Section -->
     <section class="background-section-parks">
-        <h1>State Parks of the Pacific Northwest</h1>
+        <h1>Parks & Scenic Areas of the Pacific Northwest</h1>
     </section>
 
     <!-- Main Content -->
@@ -34,7 +34,7 @@
 
         <div class="parks-container">
             <div class="park-item">
-                <img src="../images/Redwoods.jpg" alt="Redwoods" class="park-image">
+                <img src="../images/Redwoods_2.jpg" alt="Redwoods" class="park-image">
                 <div class="park-box">
                     <h3>Redwoods National and State Parks</h3>
                     <p>Home to the tallest trees on Earth, this park offers breathtaking views, lush forests, and beautiful trails.</p>
@@ -42,7 +42,7 @@
             </div>
 
             <div class="park-item">
-                <img src="../images/Mount_Rainier.jpg" alt="Mount Rainier" class="park-image">
+                <img src="../images/Mount_Rainier_2.jpg" alt="Mount Rainier" class="park-image">
                 <div class="park-box">
                     <h3>Mount Rainier National Park</h3>
                     <p>Known for its towering peak, snow-covered landscapes, and incredible wildlife, it's a must-see for nature lovers.</p>
@@ -50,7 +50,7 @@
             </div>
 
             <div class="park-item">
-                <img src="../images/Multnomah_Falls.jpg" alt="Multnomah Falls" class="park-image">
+                <img src="../images/Multnomah_Falls_2.jpg" alt="Multnomah Falls" class="park-image">
                 <div class="park-box">
                     <h3>Multnomah Falls</h3>
                     <p>A stunning waterfall located in the Columbia River Gorge, offering scenic views and trails for all skill levels.</p>
