Created links and pages for beaches, cities, and parks

--- a/landscapes/beaches.html
+++ b/landscapes/beaches.html
@@ -18,8 +18,8 @@
         <nav class="nav-links">
             <a href="../states_provinces/oregon.html">Oregon</a>
             <a href="../states_provinces/washington.html">Washington</a>
+            <a href="../states_provinces/idaho.html">Idaho</a>
             <a href="../states_provinces/california.html">Northern California</a>
-            <a href="../states_provinces/idaho.html">Western Idaho</a>
             <a href="../states_provinces/british_columbia.html">British Columbia</a>
         </nav>
     </header>
@@ -34,7 +34,9 @@
 
         <div class="beaches-container">
             <div class="beach-item">
-                <img src="../images/Cannon_Beach_2.jpg" alt="Cannon Beach" class="beach-image">
+                <a href="beaches/cannon_beach.html">
+                    <img src="../images/Cannon_Beach_2.jpg" alt="Cannon Beach" class="beach-image">
+                </a>
                 <div class="beach-box">
                     <h3>Cannon Beach</h3>
                     <p>Famous for Haystack Rock, this Oregon beach is a must-see with stunning views, tide pools, and vibrant sunsets.</p>
@@ -42,7 +44,9 @@
             </div>
         
             <div class="beach-item">
-                <img src="../images/Ruby_Beach.jpg" alt="Ruby Beach" class="beach-image">
+                <a href="beaches/ruby_beach.html">
+                    <img src="../images/Ruby_Beach.jpg" alt="Ruby Beach" class="beach-image">
+                </a>
                 <div class="beach-box">
                     <h3>Ruby Beach</h3>
                     <p>Known for its dramatic sea stacks and driftwood-covered shores, Ruby Beach offers breathtaking coastal scenery.</p>
@@ -50,7 +54,9 @@
             </div>
         
             <div class="beach-item">
-                <img src="../images/Glass_Beach.jpg" alt="Glass Beach" class="beach-image">
+                <a href="beaches/glass_beach.html">
+                    <img src="../images/Glass_Beach.jpg" alt="Glass Beach" class="beach-image">
+                </a>
                 <div class="beach-box">
                     <h3>Glass Beach</h3>
                     <p>Once a dumpsite, Glass Beach is now a unique treasure trove of colorful sea glass polished by the ocean.</p>
