--- a/landscapes/cities.html
+++ b/landscapes/cities.html
@@ -34,7 +34,9 @@
 
         <div class="cities-container">
             <div class="city-item">
-                <img src="../images/Portland_2.jpg" alt="Portland" class="city-image">
+                <a href="cities/portland.html">
+                    <img src="../images/Portland_2.jpg" alt="Portland" class="city-image">
+                </a>
                 <div class="city-box">
                     <h3>Portland</h3>
                     <p>Known for its vibrant culture, lush green parks, and thriving food scene.</p>
@@ -42,7 +44,9 @@
             </div>
 
             <div class="city-item">
-                <img src="../images/Seattle.jpg" alt="Seattle" class="city-image">
+                <a href="cities/seattle.html">
+                    <img src="../images/Seattle.jpg" alt="Seattle" class="city-image">
+                </a>
                 <div class="city-box">
                     <h3>Seattle</h3>
                     <p>Home to the iconic Space Needle, bustling Pike Place Market, and breathtaking waterfront views.</p>
@@ -50,7 +54,9 @@
             </div>
 
             <div class="city-item">
-                <img src="../images/Vancouver.jpg" alt="Vancouver" class="city-image">
+                <a href="cities/vancouver.html">
+                    <img src="../images/Vancouver.jpg" alt="Vancouver" class="city-image">
+                </a>
                 <div class="city-box">
                     <h3>Vancouver</h3>
                     <p>A stunning coastal city in British Columbia, famous for its natural beauty and diverse culture.</p>
