--- a/landscapes/state_parks.html
+++ b/landscapes/state_parks.html
@@ -34,15 +34,19 @@
 
         <div class="parks-container">
             <div class="park-item">
-                <img src="../images/Redwoods_2.jpg" alt="Redwoods" class="park-image">
+                <a href="parks/redwoods.html">
+                    <img src="../images/Redwoods_2.jpg" alt="Redwoods" class="park-image">
+                </a>
                 <div class="park-box">
-                    <h3>Redwoods National and State Parks</h3>
+                    <h3>Redwood State Park</h3>
                     <p>Home to the tallest trees on Earth, this park offers breathtaking views, lush forests, and beautiful trails.</p>
                 </div>
             </div>
 
             <div class="park-item">
-                <img src="../images/Mount_Rainier_2.jpg" alt="Mount Rainier" class="park-image">
+                <a href="parks/mt_rainer.html">
+                    <img src="../images/Mount_Rainier_2.jpg" alt="Mount Rainier" class="park-image">
+                </a>
                 <div class="park-box">
                     <h3>Mount Rainier National Park</h3>
                     <p>Known for its towering peak, snow-covered landscapes, and incredible wildlife, it's a must-see for nature lovers.</p>
@@ -50,7 +54,9 @@
             </div>
 
             <div class="park-item">
-                <img src="../images/Multnomah_Falls_2.jpg" alt="Multnomah Falls" class="park-image">
+                <a href="parks/multnomah_falls.html">
+                    <img src="../images/Multnomah_Falls_2.jpg" alt="Multnomah Falls" class="park-image">
+                </a>
                 <div class="park-box">
                     <h3>Multnomah Falls</h3>
                     <p>A stunning waterfall located in the Columbia River Gorge, offering scenic views and trails for all skill levels.</p>
