Added images to landscape pages

--- a/landscapes/parks/redwoods.html
+++ b/landscapes/parks/redwoods.html
@@ -25,7 +25,7 @@
     </header>
 
     <div class="background-section-redwoods">
-        <h1>Redwoods</h1>
+        <h1>Redwoods State Park</h1>
     </div>
 
     <div style="text-align: center; width: 80%; margin: 20px auto;">
