--- a/landscapes/state_parks.html
+++ b/landscapes/state_parks.html
@@ -38,7 +38,7 @@
                     <img src="../images/Redwoods_2.jpg" alt="Redwoods" class="park-image">
                 </a>
                 <div class="park-box">
-                    <h3>Redwood State Park</h3>
+                    <h3>Redwoods State Park</h3>
                     <p>Home to the tallest trees on Earth, this park offers breathtaking views, lush forests, and beautiful trails.</p>
                 </div>
             </div>
