Updated API and fixed map errors between locations

--- a/landscapes/parks/mt_rainier.html
+++ b/landscapes/parks/mt_rainier.html
@@ -25,7 +25,7 @@
     </header>
 
     <div class="background-section-mt-rainier">
-        <h1>Mount Rainier</h1>
+        <h1>Mt. Rainier National Park</h1>
     </div>
 
     <div style="text-align: center; width: 80%; margin: 20px auto;">
