--- a/landscapes/state_parks.html
+++ b/landscapes/state_parks.html
@@ -44,11 +44,11 @@
             </div>
 
             <div class="park-item">
-                <a href="parks/mt_rainer.html">
+                <a href="parks/mt_rainier.html">
                     <img src="../images/Mount_Rainier_2.jpg" alt="Mount Rainier" class="park-image">
                 </a>
                 <div class="park-box">
-                    <h3>Mount Rainier National Park</h3>
+                    <h3>Mt. Rainier National Park</h3>
                     <p>Known for its towering peak, snow-covered landscapes, and incredible wildlife, it's a must-see for nature lovers.</p>
                 </div>
             </div>
