Updated header, footer, and index page styling

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <a href="states_provinces/idaho.html"> Idaho</a>
             <a href="states_provinces/california.html">Northern California</a>
             <a href="states_provinces/british_columbia.html">British Columbia</a>
+
+            <!-- Search Form -->
+            <form id="searchForm" class="search-form">
+                <input type="text" id="searchInput" class="search-bar" placeholder="Search..." required>
+                <button type="button" id="searchButton" class="search-button">Search</button>
+            </form>
         </nav>
     </header>
 
@@ -46,6 +52,10 @@
 
     <!-- Footer -->
     <footer class="footer">
+        <a href="index.html">
+            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="footer-logo">
+        </a>
+        <hr class="footer-line">
         <p>Copyright: © 2025 Traverse The Cascades. All rights reserved.</p>
     </footer>
 
