--- a/landscapes/state_parks.html
+++ b/landscapes/state_parks.html
@@ -12,15 +12,21 @@
 
     <!-- Header -->
     <header class="header">
-        <a href="../index.html">
-            <img src="../images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
+        <a href="index.html">
+            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
         </a>
         <nav class="nav-links">
-            <a href="../states_provinces/oregon.html">Oregon</a>
-            <a href="../states_provinces/washington.html">Washington</a>
-            <a href="../states_provinces/california.html">Northern California</a>
-            <a href="../states_provinces/idaho.html">Western Idaho</a>
-            <a href="../states_provinces/british_columbia.html">British Columbia</a>
+            <a href="states_provinces/oregon.html">Oregon</a>
+            <a href="states_provinces/washington.html">Washington</a>
+            <a href="states_provinces/idaho.html"> Idaho</a>
+            <a href="states_provinces/california.html">Northern California</a>
+            <a href="states_provinces/british_columbia.html">British Columbia</a>
+
+            <!-- Search Form -->
+            <form id="searchForm" class="search-form">
+                <input type="text" id="searchInput" class="search-bar" placeholder="Search..." required>
+                <button type="button" id="searchButton" class="search-button">Search</button>
+            </form>
         </nav>
     </header>
 
@@ -39,7 +45,8 @@
                 </a>
                 <div class="park-box">
                     <h3>Redwoods State Park</h3>
-                    <p>Home to the tallest trees on Earth, this park offers breathtaking views, lush forests, and beautiful trails.</p>
+                    <p>Home to the tallest trees on Earth, this park offers breathtaking views, lush forests, and
+                        beautiful trails.</p>
                 </div>
             </div>
 
@@ -49,7 +56,8 @@
                 </a>
                 <div class="park-box">
                     <h3>Mt. Rainier National Park</h3>
-                    <p>Known for its towering peak, snow-covered landscapes, and incredible wildlife, it's a must-see for nature lovers.</p>
+                    <p>Known for its towering peak, snow-covered landscapes, and incredible wildlife, it's a must-see
+                        for nature lovers.</p>
                 </div>
             </div>
 
@@ -59,7 +67,8 @@
                 </a>
                 <div class="park-box">
                     <h3>Multnomah Falls</h3>
-                    <p>A stunning waterfall located in the Columbia River Gorge, offering scenic views and trails for all skill levels.</p>
+                    <p>A stunning waterfall located in the Columbia River Gorge, offering scenic views and trails for
+                        all skill levels.</p>
                 </div>
             </div>
         </div>
@@ -68,6 +77,10 @@
 
     <!-- Footer -->
     <footer class="footer">
+        <a href="index.html">
+            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="footer-logo">
+        </a>
+        <hr class="footer-line">
         <p>Copyright: © 2025 Traverse The Cascades. All rights reserved.</p>
     </footer>
 
