--- a/states_provinces/california.html
+++ b/states_provinces/california.html
@@ -12,15 +12,21 @@
 
     <!-- Header -->
     <header class="header">
-        <a href="../index.html">
-            <img src="../images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
+        <a href="index.html">
+            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
         </a>
         <nav class="nav-links">
-            <a href="../states_provinces/oregon.html">Oregon</a>
-            <a href="../states_provinces/washington.html">Washington</a>
-            <a href="../states_provinces/idaho.html">Idaho</a>
-            <a href="../states_provinces/california.html">Northern California</a>
-            <a href="../states_provinces/british_columbia.html">British Columbia</a>
+            <a href="states_provinces/oregon.html">Oregon</a>
+            <a href="states_provinces/washington.html">Washington</a>
+            <a href="states_provinces/idaho.html"> Idaho</a>
+            <a href="states_provinces/california.html">Northern California</a>
+            <a href="states_provinces/british_columbia.html">British Columbia</a>
+
+            <!-- Search Form -->
+            <form id="searchForm" class="search-form">
+                <input type="text" id="searchInput" class="search-bar" placeholder="Search..." required>
+                <button type="button" id="searchButton" class="search-button">Search</button>
+            </form>
         </nav>
     </header>
 
@@ -81,7 +87,11 @@
     <div id="hourly-forecast" class="hourly-container"></div>
 
     <!-- Footer -->
-    <footer class=" footer">
+    <footer class="footer">
+        <a href="index.html">
+            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="footer-logo">
+        </a>
+        <hr class="footer-line">
         <p>Copyright: © 2025 Traverse The Cascades. All rights reserved.</p>
     </footer>
 
