Fixed navigation links

--- a/landscapes/cities/seattle.html
+++ b/landscapes/cities/seattle.html
@@ -12,15 +12,15 @@
 
     <!-- Header -->
     <header class="header">
-        <a href="index.html">
-            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
+        <a href="../../index.html">
+            <img src="../../images/Traverse The Cascades Logo.png" alt="TTC Logo" class="header-logo">
         </a>
         <nav class="nav-links">
-            <a href="states_provinces/oregon.html">Oregon</a>
-            <a href="states_provinces/washington.html">Washington</a>
-            <a href="states_provinces/idaho.html"> Idaho</a>
-            <a href="states_provinces/california.html">Northern California</a>
-            <a href="states_provinces/british_columbia.html">British Columbia</a>
+            <a href="../../states_provinces/oregon.html">Oregon</a>
+            <a href="../../states_provinces/washington.html">Washington</a>
+            <a href="../../states_provinces/idaho.html"> Idaho</a>
+            <a href="../../states_provinces/california.html">Northern California</a>
+            <a href="../../states_provinces/british_columbia.html">British Columbia</a>
 
             <!-- Search Form -->
             <form id="searchForm" class="search-form">
@@ -80,8 +80,8 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="index.html">
-            <img src="images/Traverse The Cascades Logo.png" alt="TTC Logo" class="footer-logo">
+        <a href="../../index.html">
+            <img src="../../images/Traverse The Cascades Logo.png" alt="TTC Logo" class="footer-logo">
         </a>
         <hr class="footer-line">
         <p>Copyright: © 2025 Traverse The Cascades. All rights reserved.</p>
